--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "@nestjs/websockets": "^11.0.11",
     "@sequelize/postgres": "^7.0.0-alpha.44",
     "bcrypt": "^5.1.1",
+    "dotenv": "^16.4.7",
     "jwt-decode": "^4.0.0",
     "nodemailer": "^6.10.0",
     "passport": "^0.7.0",
