ci(github): updated assign-reviewer.yml

--- a/.github/workflows/assign-reviewer.yml
+++ b/.github/workflows/assign-reviewer.yml
@@ -1,26 +1,28 @@
-name: Assign Reviewer
+name: Auto Assign Reviewers
 
 on:
   pull_request:
-    types: [opened]
+    types: [opened, synchronize, reopened]
 
 jobs:
-  assign-reviewer:
+  assign-reviewers:
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v2
 
-      - name: Assign Reviewer
+      - name: Auto assign reviewers using GitHub API
         uses: actions/github-script@v6
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
+            const pr = context.payload.pull_request;
             const reviewers = ['scobca'];
-            
-            await github.pulls.requestReviewers({
+            const response = await github.pulls.requestReviewers({
               owner: context.repo.owner,
               repo: context.repo.repo,
-              pull_number: context.payload.pull_request.number,
-              reviewers
+              pull_number: pr.number,
+              reviewers: reviewers
             });
+            console.log('Assigned reviewers: ', reviewers);
