docker(core): updated docker-compose.yaml

--- a/docker/docker-compose.yaml
+++ b/docker/docker-compose.yaml
@@ -1,6 +1,6 @@
 name: "opd-professional-score"
 services:
-  elasticsearch:
+  elastic:
     build:
       context: ./
       dockerfile: Dockerfile
@@ -28,13 +28,13 @@ services:
     image: kibana:8.2.0
     environment:
       - SERVERNAME=kibana
-      - ELASTICSEARCH_HOSTS=http://elasticsearch:9200
+      - ELASTICSEARCH_HOSTS=http://elastic:9200
     volumes:
       - kibanadata:/usr/share/kibana/data
     ports:
       - "5601:5601"
     depends_on:
-      - elasticsearch
+      - elastic
     networks:
       - internal
 
